Fix: Hidden overflow x

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,9 @@
   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 }
 
+body {
+  overflow-x: hidden;
+}
 /* Header */
 
 .bannerIndex {
@@ -491,7 +494,7 @@ h2 {
 }
 
 .company-list {
-  margin-top: 50px;
+  margin-top: 20px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
